Fixed profile analysis overflow

--- a/styles/profile.css
+++ b/styles/profile.css
@@ -88,7 +88,8 @@
 }
 
 .stats {
-  height: 75%;
+  height: 98%;
+  overflow: scroll;
 }
 
 .analysis {
